:books: add swagger documentation for route /service-status
